<!--
Copyright 2017 Akamai Technologies, Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.-->

<resources>
    <string name="app_name">Urban Crawl</string>
    <string name="app_first_name">Urban</string>
    <string name="app_second_name">Crawl</string>

    <string name="title_activity_splash">SplashActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_tagline">Travel the world with us</string>
    <string name="plantravel_dates_header">What dates are you traveling?</string>
    <string name="plantravel_city_label">Which city are you going to?</string>
    <string name="start_date_label">start date:</string>
    <string name="end_date_label">end date:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_webviewer">WebViewerActivity</string>

    <array name="dummyVals">
        <item>...</item>
    </array>
    <string name="title_activity_log_viewer">LogViewerActivity</string>
</resources>
